updated research section and change carousel size. Removed carousel from home page

--- a/css/main.css
+++ b/css/main.css
@@ -418,3 +418,16 @@ input::placeholder {
     border: none !important;
   }
 }
+
+/* Personal functions */
+.carousel .carousel-item {
+  height: 600px;
+}
+
+.carousel-item img {
+    position: absolute;
+    object-fit:cover;
+    top: 0;
+    left: 0;
+    min-height: 500px;
+}
